--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="left_menu new_level">
+<div class="left_menu">
   <ul>
     <% Conference.all.each do |conference| %>
         <li class="with_submenu<%= ' active' if @conference == conference %>">
