--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -71,7 +71,7 @@
         <div class="field">
           <%= f.label :summary %>
           <br/>
-          <%= f.text_area :summary, :class => "comment" %>
+          <%= f.text_area :summary, :class => "comment", :rows => 5 %>
         </div>
       </li>
     </ul>
