--- a/app/views/support/new.html.erb
+++ b/app/views/support/new.html.erb
@@ -1,3 +1,7 @@
-<h2>Contact Us
-</h2><%= render 'form' %>
-			
+<div class="content">
+  <div class="content_header clearfix">
+    <div class="content_title">Contact</div>
+    <div class="content_subtitle">GIVE US YOUR FEEDBACK!</div>
+  </div>
+  <%= render 'form' %>
+</div>
