--- a/app/views/conferences/show.html.erb
+++ b/app/views/conferences/show.html.erb
@@ -2,17 +2,7 @@
   <%= render :partial => 'shared/masthead' %>
   <div class="content_title"><%= @conference.name %></div>
   <div class="content_stats clearfix">
-    <div class="buttons clearfix">
-      <div class="button">
-        <b>Smacks:</b> <%= @conference.smacks_count %>
-      </div>
-      <div class="button">
-        <b>Redemtions:</b> <%= @conference.redemptions_count %>
-      </div>
-      <div class="button blue">
-        <a href="">View stats</a>
-      </div>
-    </div>
+    <%= render 'shared/photovideomenu' %>
     <%= render 'shared/search' %>
   </div>
   <% unless @posts.empty? %>
