--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -1,5 +1,5 @@
 <div class="field">
-  <%= f.label :comment %>
+  <%= f.label :comment, 'Add comment' %>
   <br/>
-  <%= f.text_area :comment, :class => "comment", :rows => 5 %>
+  <%= f.text_area :comment, :rows => 5 %>
 </div>
